# dexter-solana-demo

./: Cargo.toml  LICENCE  README.md
client/client/: Cargo.toml
client/client-anchor/: Cargo.toml
client/client-anchor/src/: account.rs  getter.rs  lib.rs  setter.rs
client/client-api/: Cargo.toml
client/client-api/src/: client.rs  errors.rs  execution.rs  lib.rs
client/client-api/src/base/: executor.rs  getter.rs  mod.rs  setter.rs
client/client-api/src/base_impls/: bank.rs  banks_client_blocking.rs  banks_client_nonblocking.rs  mod.rs  rpc_client.rs
client/client-api/src/exts/: executor.rs  getter.rs  mod.rs
client/client-api/src/internals/: fee.rs  mod.rs  sanitize.rs
client/client-spl/: Cargo.toml
client/client-spl/src/: associated_token.rs  associated_token_interface.rs  lib.rs  token.rs  token_interface.rs
client/client-sys/: Cargo.toml
client/client-sys/src/: address_lookup_table.rs  feature.rs  lib.rs  pack.rs  program.rs  remote.rs  sysvar.rs  wallet.rs
client/client/src/: lib.rs
solana/banks-client-blocking/: Cargo.toml
solana/banks-client-blocking/src/: lib.rs
