[workspace]
members = [
    "client/client",
    "client/client-anchor",
    "client/client-api",
    "client/client-spl",
    "client/client-sys",
    "solana/banks-client-blocking",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["magito <magito.dev@gmail.com>"]
license = "MIT"
description = "A framework for solana bots"

[workspace.dependencies]
base64 = "0.21.7"
bincode = "1.3.3"
borsh = { version = "1.2.1", features = ["derive", "unstable__schema"] }
bytemuck = "1.14.0"
once_cell = "1.13.0"
reqwest = { version = "0.11.23", default-features = false }
serde = "1.0.195"
serde_json = "1.0.111"
tarpc = "0.29.0"
tempfile = "3.9.0"
thiserror = "1.0.56"
tokio = "1.29.1"

# Solana
solana-accounts-db = { version = "=1.18.22" }
solana-account-decoder = { version = "=1.18.22" }
solana-banks-client = { version = "=1.18.22" }
solana-banks-interface = { version = "=1.18.22" }
solana-program-runtime = { version = "=1.18.22" }
solana-rpc-client = { version = "=1.18.22", default-features = false }
solana-rpc-client-api = { version = "=1.18.22" }
solana-runtime = { version = "=1.18.22" }
solana-sdk = { version = "=1.18.22" }
solana-transaction-status = { version = "=1.18.22" }

# Anchor
anchor-lang = "=0.30.1"
anchor-spl = "=0.30.1"

# Dexter Internal
dexter-client = { path = "./client/client" }
dexter-client-anchor = { path = "./client/client-anchor" }
dexter-client-api = { path = "./client/client-api" }
dexter-client-spl = { path = "./client/client-spl" }
dexter-client-sys = { path = "./client/client-sys" }
dexter-solana-banks-client-blocking = { path = "./solana/banks-client-blocking" }
