[package]
name = "dexter-client-sys"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bincode = { workspace = true }

solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }

dexter-client-api = { workspace = true }
